# BxBoostSerializationTests

./: CMakeLists.txt  README.rst
test1/: CMakeLists.txt  README.rst  test1.cxx  test1a.cxx  test1b.cxx  test1c.cxx  test1d.cxx  test1e.cxx
test2/: CMakeLists.txt  README.rst  class4-serial.hpp  class4.cpp  class4.hpp  test2.cxx  test2b.cxx  test2c.cxx  the_serializable.cpp
test2/lib1/: archives_instantiation.hpp  archives_list.hpp  base-serial.hpp  base.cpp  base.hpp  class1-serial.hpp  class1.cpp  class1.hpp  class2-serial.hpp  class2.cpp  class2.hpp  class3-serial.hpp  class3.cpp  class3.hpp  the_serializable.cpp
tools/: build.sh  clean.sh
